<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background_main">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_Bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_background_main"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/backdrop_image_height"
                    android:layout_margin="@dimen/padding_zero"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toStartOf="@+id/favourite_btn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Movie One" />

               <ImageView
                   android:id="@+id/share_btn"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="@dimen/padding_small"
                   android:layout_marginRight="@dimen/padding_small"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:scaleType="center"
                   android:src="@drawable/ic_action_share"
                   app:layout_constraintTop_toTopOf="@+id/favourite_btn"
                   app:layout_constraintBottom_toBottomOf="@+id/favourite_btn"
                   app:layout_constraintEnd_toEndOf="parent"/>

                <ImageView
                    android:id="@+id/favourite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="center"
                    android:src="@drawable/ic_favourite_off"
                    app:layout_constraintTop_toTopOf="@+id/title"
                    app:layout_constraintEnd_toStartOf="@+id/share_btn" />

                <ImageView
                    android:id="@+id/poster_image"
                    android:layout_width="@dimen/poster_image_width"
                    android:layout_height="@dimen/poster_image_height"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />


                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:text="@string/date_label"
                    android:textColor="@color/color_text_subtitles"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/poster_image"
                    app:layout_constraintTop_toTopOf="@+id/poster_image" />

                <TextView
                    android:id="@+id/date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_text_details"
                    app:layout_constraintStart_toStartOf="@+id/date_label"
                    app:layout_constraintTop_toBottomOf="@+id/date_label"
                    tools:text="20-01-2000" />

                <TextView
                    android:id="@+id/rate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_big"
                    android:text="@string/rate_label"
                    android:textColor="@color/color_text_subtitles"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/date_value"
                    app:layout_constraintTop_toBottomOf="@+id/date_value" />

                <TextView
                    android:id="@+id/rate_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_text_details"
                    app:layout_constraintStart_toStartOf="@+id/rate_label"
                    app:layout_constraintTop_toBottomOf="@+id/rate_label"
                    tools:text="4.8" />


                <TextView
                    android:id="@+id/overview_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:background="@color/background_titles"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingStart="@dimen/padding_small"
                    android:text="@string/overview_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_text_subtitles"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/poster_image" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_thickness"
                    android:background="@color/colorAccent"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/overview_label"/>

                <TextView
                    android:id="@+id/overview_value"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/video_thumbnail_height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_text_details"
                    android:paddingStart="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingEnd="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingBottom="@dimen/padding_small"
                    android:background="@color/background_details_child"
                    app:layout_constraintEnd_toEndOf="@+id/overview_label"
                    app:layout_constraintStart_toStartOf="@+id/overview_label"
                    app:layout_constraintTop_toBottomOf="@+id/overview_label"
                    tools:text="@string/overview_placeholder_value" />

                <TextView
                    android:id="@+id/trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:background="@color/background_titles"

                    android:paddingEnd="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingStart="@dimen/padding_small"
                    android:text="@string/trailers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_text_subtitles"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/overview_value"
                    app:layout_constraintStart_toStartOf="@+id/overview_value"
                    app:layout_constraintTop_toBottomOf="@+id/overview_value" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_thickness"
                    android:background="@color/colorAccent"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/trailers"/>


                <include
                    android:id="@+id/place_holder_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/video_thumbnail_height"
                    layout="@layout/place_holder_layout"
                    android:background="@color/background_details_child"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginLeft="@dimen/padding_small"
                    app:layout_constraintEnd_toEndOf="@+id/trailers"
                    app:layout_constraintStart_toStartOf="@+id/trailers"
                    app:layout_constraintTop_toBottomOf="@+id/trailers"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailer_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:background="@color/background_details_child"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trailers">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:background="@color/background_titles"

                    android:paddingEnd="@dimen/padding_small"
                    android:paddingLeft="@dimen/padding_small"
                    android:paddingRight="@dimen/padding_small"
                    android:paddingStart="@dimen/padding_small"
                    android:text="@string/reviews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/color_text_subtitles"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/place_holder_trailers" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_thickness"
                    android:background="@color/colorAccent"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/reviews"/>


                <include
                    android:id="@+id/place_holder_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/video_thumbnail_height"
                    layout="@layout/place_holder_layout"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:background="@color/background_details_child"
                    app:layout_constraintEnd_toEndOf="@+id/reviews"
                    app:layout_constraintStart_toStartOf="@+id/reviews"
                    app:layout_constraintTop_toBottomOf="@+id/reviews"/>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/video_thumbnail_height"
                    android:paddingTop="@dimen/padding_small"
                    android:layout_marginEnd="@dimen/padding_small"
                    android:layout_marginStart="@dimen/padding_small"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:background="@color/background_details_child"
                    android:layout_marginBottom="@dimen/padding_big"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reviews">

                </android.support.v7.widget.RecyclerView>

            </android.support.constraint.ConstraintLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
